Check that we have a valid path when emitting a signal

If we don't have a valid object path in emit_event (ie, if NULL is
passed in, for some strange reason), then return rather than crashing in
libdbus.

https://bugzilla.gnome.org/show_bug.cgi?id=669794